--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
     margin: auto;
     width: 400px;
     height: 100px;
-    line-height: 100px;
+    padding: 10px;
     border: 1px solid black;
     text-align: center;
-    vertical-align: middle;
+    
     
 }
 
